--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -73,8 +73,8 @@
   <!--BAGGRUNDSBILLEDE-->
   <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
   <div class="container-fluid orange">
-    <div class="hero-sektion position-relative d-flex justify-content-center">
-      <img class="bordhero" src="img/bord.png" alt="">
+    <div class="hero-sektion position-relative d-flex justify-content-center skaal">
+      <img class="bordhero" src="img/skaal.png" alt="">
 
 
       <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
@@ -82,7 +82,7 @@
       <!--w-100 h-100: gør overlay lige så stort som billedet-->
       <!--d-flex ....: centrerer tekst midt i billedet-->
       <div
-        class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center">
+        class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end align-items-center text-center">
         <h1>Fælles-skål</h1>
       </div>
     </div>
