--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -136,7 +136,7 @@
   <!-- ===========================
        SOMMER-OPSKRIFTER
        =========================== -->
-  <!--Skjules fra medium skærm (768px) og ned-->
+  <!--Skjules fra medium skærm (768px) og op-->
   <div id="alle-sommer" class="custom-container d-none d-md-block">
     <div class="row align-items-start py-5">
       <!--Overskrift m. link til sommersiden-->
