--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -115,7 +115,7 @@
       <!-- Kolonne: 12 på mobil, 6 på store skærme (≥992px)-->
       <!--Rækkefølge: 1 på mobil, 2 på store skærme-->
       <div class="col-12 col-lg-6 order-1 order-lg-2">
-        <img src="img/faellesskaal.png" alt="">
+        <img src="img/stemning/digital4.png" alt="">
       </div>
     </div>
   </div>
