--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ From line 88, column 7; to line 88, column 33
        FÆLLESSKAB-AFSNIT M. BORD - LINKER TIL FÆLLES-SKÅL SIDEN 
        =========================== -->
   <div class="orange position-relative faelles-bord">
-    <a href="faellesskaal.html">
+    <a class="falles-link" href="faellesskaal.html">
       <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
         <img src="img/mobilfaellesskaal.png" alt="">
