--- a/omos.html
+++ b/omos.html
@@ -146,17 +146,18 @@
     </div>
   </div>
 
-    <!-- ===========================
-       FÆLLESSKAB SOM LINKER TIL FÆLLES-SKÅL SIDE
+ <!-- ===========================
+       FÆLLESSKAB-AFSNIT M. BORD - LINKER TIL FÆLLES-SKÅL SIDEN 
        =========================== -->
-  <div class="container-fluid orange position-relative faelles-bord">
-    <a href="faellesskaal.html">
+  <div class="orange position-relative faelles-bord">
+    <a class="falles-link" href="faellesskaal.html">
       <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
         <img src="img/mobilfaellesskaal.png" alt="">
       </picture>
     </a>
   </div>
+
 
 
 
