--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lille Skål: et madunivers</title>
+  <title>Lille Skål: et sæsonbaserede madunivers</title>
+  <meta name="description" content="Lille Skål er en madplatform med fokus på sæsonens råvarer, fællesskab og bæredygtige opskrifter for unge i Storkøbenhavn.">
+
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -144,7 +146,7 @@ From line 88, column 7; to line 88, column 33
             Vi samles om maden i det gode vejr og nyder de råvarer, der kun findes i denne sæson.
           </p>
           <!--Linkt til opskrifter fra sæson-->
-          <a href="sommer.html">Se sommerens opskrifter her</a>
+          <a href="sommer.html">Se alle sommer-opskrifter her</a>
         </div>
 
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) og op -->
@@ -170,7 +172,7 @@ From line 88, column 7; to line 88, column 33
             efter en lang vinter.
           </p>
           <!--Linkt til opskrifter fra sæson-->
-          <a href="foraar.html">Find forårets opskrifter her</a>
+          <a href="foraar.html">Find alle forårs-opskrifter her</a>
         </div>
 
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) og op -->
@@ -193,7 +195,7 @@ From line 88, column 7; to line 88, column 33
             Vi tager imod årstidens overflod og bruger råvarerne til at skabe mad, der samler os og giver ro og nærvær.
           </p>
           <!--Linkt til opskrifter fra sæson-->
-          <a href="efteraar.html">Oplev efterårets opskrifter her</a>
+          <a href="efteraar.html">Oplev alle efterårs-opskrifter her</a>
         </div>
 
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) og op -->
@@ -220,7 +222,7 @@ From line 88, column 7; to line 88, column 33
             denne tid.
           </p>
           <!--Linkt til opskrifter fra sæson-->
-          <a href="vinter.html">Find vinterens opskrifter her</a>
+          <a href="vinter.html">Find alle vinter-opskrifter her</a>
         </div>
 
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) og op -->
