--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -74,7 +74,7 @@
   <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
   <div class="container-fluid orange">
     <div class="hero-sektion position-relative d-flex justify-content-center skaal">
-      <img class="bordhero" src="img/skaal.png" alt="">
+      <img class="faellesskaal-hero" src="img/skaal.png" alt="">
 
 
       <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
