--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo lilleskål"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -87,7 +87,7 @@
       <!--Illustration vises ikke på mobil-->
       <!-- Kolonne: 3 på små skærme (576px) og op. + forkydes 1 kol. på medium skærme (768px) og op -->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/rodlog.png" alt="illustration">
+        <img src="img/illustrationer/rodlog.png" alt="Rødløg illustration">
       </div>
     </div>
   </div>
@@ -108,21 +108,21 @@
         </a>
         <!--Første opskrift-->
         <div class="col text-center">
-          <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
+          <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto"></a>
           <a href="foraar1.html">
             <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
           </a>
         </div>
         <!--Anden opskrift-->
         <div class="col text-center">
-          <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
+          <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron"></a>
           <a href="foraar2.html">
             <h3>Forårs-orzo med tomater og citron</h3>
           </a>
         </div>
         <!--Tredje opskrift-->
         <div class="col text-center">
-          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
+          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam"></a>
           <a href="foraar3.html">
             <h3>Forårsnudler med radiser, porre og sesam</h3>
           </a>
@@ -145,21 +145,21 @@
       </a>
       <!--Første opskrift-->
       <div class="col text-center">
-        <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
+        <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt="Lilleskåls sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
         <a href="sommer1.html">
           <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
         </a>
       </div>
       <!--Anden opskrift-->
       <div class="col text-center">
-        <a href="sommer2.html"><img src="img/sommer1.png" alt=""></a>
+        <a href="sommer2.html"><img src="img/sommer1.png" alt="Lilleskåls sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
         <a href="sommer2.html">
           <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
         </a>
       </div>
       <!--Tredje opskrft-->
       <div class="col text-center">
-        <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt=""></a>
+        <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt="Lilleskåls sommeropskrift: Sommerpizza med sæsonens grønt og sprød bund"></a>
         <a href="sommer3.html">
           <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
         </a>
@@ -183,21 +183,21 @@
         </a>
         <!--Første opskrift-->
         <div class="col text-center">
-          <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt=""></a>
+          <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt="Lilleskåls efterårsopskrift: Efterårssuppe med Hokkaido, gulerod og ingefær"></a>
           <a href="efteraar1.html">
             <h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3>
           </a>
         </div>
         <!--Anden opskrift-->
         <div class="col text-center">
-          <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt=""></a>
+          <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt="Lilleskåls efterårsopskrift: Efterårs-gnocchi med tomat, salvie og karamelliseret løg"></a>
           <a href="efteraar2.html">
             <h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3>
           </a>
         </div>
         <!--Tredje opskrift-->
         <div class="col text-center">
-          <a href="efteraar3.html"><img src="img/efteraar/efteraarbillede.png" alt=""></a>
+          <a href="efteraar3.html"><img src="img/efteraar/efteraarbillede.png" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder"></a>
           <a href="efteraar3.html">
             <h3>Efterårspande med karamelliserede porrer og gulerødder</h3>
           </a>
@@ -218,19 +218,19 @@
         <h2>Vinter</h2>
       </a>
       <div class="col text-center">
-        <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt=""></a>
+        <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt="Lilleskåls vintersopskrift: Vinter-nudler med porre, kål og cremet sesamsauce"></a>
         <a href="vinter1.html">
           <h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3>
         </a>
       </div>
       <div class="col text-center">
-        <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt=""></a>
+        <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt="Lilleskåls vintersopskrift: Vinter-pasta med grønkålssauce og citron"></a>
         <a href="vinter2.html">
           <h3>Vinterpasta med grønkålssauce og citron</h3>
         </a>
       </div>
       <div class="col text-center">
-        <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt=""></a>
+        <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt="Lilleskåls vintersopskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg"></a>
         <a href="vinter3.html">
           <h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3>
         </a>
