--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -74,7 +74,7 @@
   <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
   <div class="container-fluid orange">
     <div class="hero-sektion position-relative d-flex justify-content-center skaal">
-      <img class="faellesskaal-hero" src="img/skaal.png" alt="">
+      <img class="faellesskaal-hero" src="img/skaal.png" alt="Skålende vinglas illustration">
 
 
       <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
@@ -115,7 +115,7 @@
       <!-- Kolonne: 12 på mobil, 6 på store skærme (≥992px)-->
       <!--Rækkefølge: 1 på mobil, 2 på store skærme-->
       <div class="col-12 col-lg-6 order-1 order-lg-2">
-        <img src="img/stemning/digital4.png" alt="">
+        <img src="img/stemning/digital4.png" alt="Lilleskåls to kokke handler varer">
       </div>
     </div>
   </div>
@@ -133,7 +133,7 @@
     <div class=" row align-items-start ">
       <!-- Kolonne: 12 på mobil, 6 på store skærme (≥992px) -->
       <div class="col-12 col-lg-6">
-        <img src="img/stemning/peberogpasta.png" alt="">
+        <img src="img/stemning/peberogpasta.png" alt="Kvinde spiser spaghetti og anden Kvinde kværner peber">
       </div>
       <div class="minder-sammen col-12 col-lg-6">
         <h2>Lad os skabe minder sammen</h2>
@@ -211,21 +211,21 @@
             <div class="carousel-item active">
 
               <picture>
-                <img src="img/stemning/digital1.png" alt="">
+                <img src="img/stemning/digital1.png" alt="Sommerbord med Lilleskåls madret">
               </picture>
 
             </div>
             <div class="carousel-item">
 
               <picture>
-                <img src="img/stemning/digital2.png" alt="">
+                <img src="img/stemning/digital2.png" alt="Sommerbord med Lilleskåls madret">
               </picture>
 
             </div>
             <div class="carousel-item">
 
               <picture>
-                <img src="img/stemning/digital3.png" alt="">
+                <img src="img/stemning/digital3.png" alt="Sommerbord med Lilleskåls madret">
               </picture>
 
             </div>
@@ -233,7 +233,7 @@
             <div class="carousel-item">
 
               <picture>
-                <img src="img/stemning/digital4.png" alt="">
+                <img src="img/stemning/digital4.png" alt="Lilleskåls to kokke handler varer">
               </picture>
 
             </div>
