--- a/foraar.html
+++ b/foraar.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -86,7 +86,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol efter medium skærm (768px)-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/basilikum.png" alt="illustration">
+        <img src="img/illustrationer/basilikum.png" alt="Basilikum illustration">
       </div>
     </div>
   </div>
@@ -110,7 +110,7 @@
       <!--Opskrift 1-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3 text-center">
-          <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
+          <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto"></a>
           <a href="foraar1.html">
             <h3>Pasta med tomat, spidskål og ramsløgspesto</h3>
           </a>
@@ -118,7 +118,7 @@
       <!--Opskrift 2-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3 text-center">
-          <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
+          <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron"></a>
           <a href="foraar2.html">
             <h3>Forårs-orzo med tomater og citron</h3>
           </a>
@@ -126,7 +126,7 @@
       <!--Opskrift 3-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3 text-center">
-          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
+          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam"></a>
           <a href="foraar3.html">
             <h3>Forårsnudler med radiser, porre og sesam</h3>
           </a>
