--- a/foraar3.html
+++ b/foraar3.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -77,7 +77,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/foraar/heroforaarstor3.png">
-      <img src="img/foraar/herolilleforaar3.png" alt="">
+      <img src="img/foraar/herolilleforaar3.png" alt="Lilleskål forårsopskrift: Forårsnudler med radiser, porre og sesam">
     </picture>
 
   </div>
@@ -99,7 +99,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol ved medium skærm (768px) og op-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/porre.png" alt="illustration">
+        <img src="img/illustrationer/porre.png" alt="Porre illustration">
       </div>
     </div>
   </div>
@@ -146,9 +146,9 @@
             </div>
 
             <!--Billeder-->
-            <img src="img/foraar/foraar3billede1igen.png" class="billede opskrift-billede1" alt="">
-            <img src="img/foraar/foraar3ny.png" class="billede opskrift-billede2" alt="">
-            <img src="img/foraar/foraaar.png" class="billede opskrift-billede3" alt="">
+            <img src="img/foraar/foraar3billede1igen.png" class="billede opskrift-billede1" alt="Lilleskål forårsopskrift: Forårsnudler med radiser, porre og sesam">
+            <img src="img/foraar/foraar3ny.png" class="billede opskrift-billede2" alt="Lilleskål forårsopskrift: Forårsnudler med radiser, porre og sesam">
+            <img src="img/foraar/foraaar.png" class="billede opskrift-billede3" alt="Indkøbskurv med årstidens grøntsager">
           </div>
 
 
@@ -219,14 +219,14 @@
       <!--Første opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="foraar2.html">
-        <img src="img/foraar/foraar2billede4.png" alt="">
+        <img src="img/foraar/foraar2billede4.png" alt="Lilleskål forårsopskrift: Forårs-orzo med tomater og citron">
         <p>Forårs-orzo med tomater og citron</p>
       </a>
 
       <!--Anden opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="foraar1.html">
-        <img src="img/foraar/foraar1billede2.png" alt="">
+        <img src="img/foraar/foraar1billede2.png" alt="Lilleskål forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto">
         <p>Pasta med tomat, spidskål og ramsløgspesto</p>
       </a>
     </div>
