--- a/kontakt.html
+++ b/kontakt.html
@@ -78,7 +78,7 @@
     <div class="col-12 col-md-8">
       <picture>
         <source media="(min-width: 768px)" srcset="img/lilleserviet.png">
-        <img src="img/lilleservietmobil.png" alt="">
+        <img src="img/lilleservietmobil.png" alt="Serviet">
       </picture>
     
       
@@ -119,7 +119,7 @@
 
     <div class="col-12 col-md-4 pt-3">
       <!-- Kolonne: 12 på mobil, 4 på medium skærme (≥768px) og op -->
-      <img src="img/faellesskaal.png" alt="" class="kontakt-billede img-fluid">
+      <img src="img/faellesskaal.png" alt="Skålende vinglas" class="kontakt-billede img-fluid">
     </div>
   </div>
 </div>
@@ -132,7 +132,7 @@
        =========================== -->
 <div class="orange py-5">
     <div class="logo-hero d-flex justify-content-center">
-        <img src="img/logovandmaling.png" alt="logo">
+        <img src="img/logovandmaling.png" alt="lilleskål logo">
     </div>
 </div>
 
