--- a/omos.html
+++ b/omos.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -81,7 +81,7 @@
       <div class="col-12 col-md-6">
 
         <!--Billede af Amalie og Lærke-->
-        <img class="kokke" src="img/omos/kokke1.png" alt="">
+        <img class="kokke" src="img/omos/kokke1.png" alt="Lilleskåls 2 kokke">
       </div>
 
       <!-- Kolonne: 12 på mobil, 6 på medium skærme (≥768px) og op -->
@@ -94,7 +94,7 @@
           hjemmelavet mad. <br> For Amalie og Lærke handler det ikke om det perfekte billede til sociale medier, men om
           duften i køkkenet, smagen af noget godt - og glæden ved at skabe mad fra bunden, der samler folk omkring
           bordet.</p>
-        <img class="madlavning d-none d-lg-block" src="img/omos/amalieoglaerkekoekkenet.png" alt="">
+        <img class="madlavning d-none d-lg-block" src="img/omos/amalieoglaerkekoekkenet.png" alt="To kokke laver mad">
       </div>
     </div>
   </div>
@@ -122,7 +122,7 @@
       <!--Rækkefølge: 1 på mobil, 2 på medium skærme og op-->
       <div class="col-12 col-md-6 order-1 order-md-2">
         <!--Billede af Katrine og Marie-->
-        <img class="teknik" src="img/omos/teknik1.png" alt="">
+        <img class="teknik" src="img/omos/teknik1.png" alt="To teknikkere bag Lilleskål">
       </div>
     </div>
   </div>
@@ -136,12 +136,12 @@
       <!-- Kolonne: 6 på mobil, 5 på medium skærme (≥768px) og op-->
       <!--Offset: 1 kol på medium skærme og op-->
       <div class="col-6 col-md-5 offset-md-1">
-        <img src="img/omos/paastranden1.png" alt="">
+        <img src="img/omos/paastranden1.png" alt="Lilleskål holdet på stranden">
       </div>
 
       <!-- Kolonne: 6 på mobil, 4 på medium skærme (≥768px) og op-->
       <div class="col-6 col-md-4">
-        <img class="hugo" src="img/omos/hugooglaerke.png" alt="">
+        <img class="hugo" src="img/omos/hugooglaerke.png" alt="Lilleskåls ene kok og hendes hund">
       </div>
     </div>
   </div>
@@ -153,7 +153,7 @@
     <a class="falles-link" href="faellesskaal.html">
       <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
-        <img src="img/mobilfaellesskaal.png" alt="">
+        <img src="img/mobilfaellesskaal.png" alt="To vinglas skåler illustration">
       </picture>
     </a>
   </div>
