--- a/sommer1.html
+++ b/sommer1.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -76,7 +76,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/sommer/herosommerstor2.png">
-      <img src="img/sommer/herolillesommer1.png" alt="">
+      <img src="img/sommer/herolillesommer1.png" alt="Lilleskål sommer">
     </picture>
 
   </div>
@@ -97,7 +97,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol ved medium skærm (768px) og op-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img class="illustration-introduktion-sommer1" src="img/illustrationer/rosmarin.png" alt="illustration">
+        <img class="illustration-introduktion-sommer1" src="img/illustrationer/rosmarin.png" alt="Rosmarin illustration">
       </div>
     </div>
   </div>
@@ -146,9 +146,9 @@
             </div>
 
             <!--Billeder-->
-            <img src="img/sommer/sommer2billede1.png" class="billede opskrift-billede1" alt="">
-            <img src="img/sommer/sommer2billede2.png" class="billede opskrift-billede2" alt="">
-            <img src="img/sommer/sommer2billede3.png" class="billede opskrift-billede3" alt="">
+            <img src="img/sommer/sommer2billede1.png" class="billede opskrift-billede1" alt="Lilleskål sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia">
+            <img src="img/sommer/sommer2billede2.png" class="billede opskrift-billede2" alt="Lilleskål sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia">
+            <img src="img/sommer/sommer2billede3.png" class="billede opskrift-billede3" alt="Lilleskål sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia">
           </div>
 
 
@@ -217,14 +217,14 @@
       <!--Første opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="sommer2.html">
-        <img src="img/sommer/sommer1billede2.png" alt="">
+        <img src="img/sommer/sommer1billede2.png" alt="Lilleskål sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsage">
         <p>Sommer-tacos med ærtemos og grillede grøntsager</p>
       </a>
 
       <!--Anden opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="sommer3.html">
-        <img src="img/sommer/sommer3billede2.png" alt="">
+        <img src="img/sommer/sommer3billede2.png" alt="Lilleskål sommeropskrift: Sommerpizza med sæsonens grønt">
         <p>Sommerpizza med sæsonens grønt </p>
       </a>
     </div>
