--- a/sommer3.html
+++ b/sommer3.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -75,7 +75,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/sommer/herosommerstor3.png">
-      <img src="img/sommer/herolillesommer3.png" alt="">
+      <img src="img/sommer/herolillesommer3.png" alt="Lilleskål sommeropskrift: Sommerpizza med sæsonens grønt og sprød bund">
     </picture>
 
   </div>
@@ -96,7 +96,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol ved medium skærm (768px) og op-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/rodlog.png" alt="illustration">
+        <img src="img/illustrationer/rodlog.png" alt="Rødløg illustration">
       </div>
     </div>
   </div>
@@ -146,9 +146,9 @@
             </div>
 
             <!--Billeder-->
-            <img src="img/sommer/sommerpizzaa.png" class="billede opskrift-billede1" alt="">
-            <img src="img/sommer/sommer3pizza2.png" class="billede opskrift-billede2" alt="">
-            <img src="img/sommer/sommer3pizza.png" class="billede opskrift-billede3" alt="">
+            <img src="img/sommer/sommerpizzaa.png" class="billede opskrift-billede1" alt="Lilleskål sommeropskrift: Sommerpizza med sæsonens grønt og sprød bund">
+            <img src="img/sommer/sommer3pizza2.png" class="billede opskrift-billede2" alt="Lilleskål sommeropskrift: Sommerpizza med sæsonens grønt og sprød bund">
+            <img src="img/sommer/sommer3pizza.png" class="billede opskrift-billede3" alt="Lilleskål sommeropskrift: Sommerpizza med sæsonens grønt og sprød bund">
           </div>
 
 
@@ -230,14 +230,14 @@
       <!--Første opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="sommer2.html">
-        <img src="img/sommer/sommer1billede2.png" alt="">
+        <img src="img/sommer/sommer1billede2.png" alt="Lilleskål sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager">
         <p>Sommer-tacos med ærtemos og grillede grøntsager</p>
       </a>
 
       <!--Anden opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="sommer1.html">
-        <img src="img/sommer/sommer2billede2.png" alt="">
+        <img src="img/sommer/sommer2billede2.png" alt="Lilleskål sommeropskrift: ommersalat med jordbær, burrata og nem focaccia">
         <p>Sommersalat med jordbær, burrata og nem focaccia </p>
       </a>
     </div>
