--- a/efteraar2.html
+++ b/efteraar2.html
@@ -28,7 +28,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.pngg" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.pngg" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -76,7 +76,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/efteraar/heroefteraarstor3.png">
-      <img src="img/efteraar/heroefteraarlille3.png" alt="">
+      <img src="img/efteraar/heroefteraarlille3.png" alt="Lilleskåls efterårsopskrifter">
     </picture>
   </div>
 
@@ -98,7 +98,7 @@
         <!--Illustration vises ikke på mobil-->
         <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol ved medium skærm (768px) og op-->
         <div class="d-none d-sm-block col-sm-3 offset-md-1">
-          <img src="img/illustrationer/basilikum.png" alt="illustration">
+          <img src="img/illustrationer/basilikum.png" alt="Basilikum illustration">
         </div>
       </div>
     </div>
@@ -146,9 +146,9 @@
               </div>
 
               <!--Billeder-->
-              <img src="img/efteraar/efteraar2billede1ny.png" class="billede opskrift-billede1" alt="">
-              <img src="img/efteraar/efteraar2billede2ny.png" class="billede opskrift-billede2" alt="">
-              <img src="img/illustrationer/tomat.png" class="billede opskrift-billede3" alt="">
+              <img src="img/efteraar/efteraar2billede1ny.png" class="billede opskrift-billede1" alt="Lilleskåls efterårsopskrifter: Efterårs-gnocchi med tomat, salvie og karamelliseret løg">
+              <img src="img/efteraar/efteraar2billede2ny.png" class="billede opskrift-billede2" alt="Lilleskåls efterårsopskrifter: Efterårs-gnocchi med tomat, salvie og karamelliseret løg">
+              <img src="img/illustrationer/tomat.png" class="billede opskrift-billede3" alt="Lilleskåls efterårsopskrifter: Efterårs-gnocchi med tomat, salvie og karamelliseret løg">
             </div>
 
 
@@ -239,14 +239,14 @@
         <!--Første opskrift: hele boksen er et link-->
         <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
         <a class="col-12 col-sm-5" href="efteraar3.html">
-          <img src="img/efteraar/efteraar3billede2.png" alt="">
+          <img src="img/efteraar/efteraar3billede2.png" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder">
           <p>Efterårspande med karamelliserede porrer og gulerødder</p>
         </a>
 
         <!--Anden opskrift: hele boksen er et link-->
         <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
         <a class="col-12 col-sm-5" href="efteraar1.html">
-          <img src="img/efteraar/efteraar1billede1ny.png" alt="">
+          <img src="img/efteraar/efteraar1billede1ny.png" alt="Lilleskåls efterårsopskrift: Efterårssuppe med Hokkaido, gulerod og ingefær">
           <p>Efterårssuppe med Hokkaido, gulerod og ingefær</p>
         </a>
       </div>
