--- a/efteraar3.html
+++ b/efteraar3.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -77,7 +77,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/efteraar/heroefteraarstor1.png">
-      <img src="img/efteraar/herolilleefteraar1.png" alt="">
+      <img src="img/efteraar/herolilleefteraar1.png" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder">
     </picture>
 
   </div>
@@ -100,7 +100,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol ved medium skærm (768px) og op-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/lys.png" alt="illustration">
+        <img src="img/illustrationer/lys.png" alt="Lys illustration">
       </div>
     </div>
   </div>
@@ -149,9 +149,9 @@
             </div>
 
             <!--Billeder-->
-            <img src="img/efteraar/efteraar3billede1.png" class="billede opskrift-billede1" alt="">
-            <img src="img/efteraar/efteraar3billede2.png" class="billede opskrift-billede2" alt="">
-            <img src="img/efteraar/efteraar3billede3.png" class="billede opskrift-billede3" alt="">
+            <img src="img/efteraar/efteraar3billede1.png" class="billede opskrift-billede1" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder">
+            <img src="img/efteraar/efteraar3billede2.png" class="billede opskrift-billede2" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder">
+            <img src="img/efteraar/efteraar3billede3.png" class="billede opskrift-billede3" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder">
           </div>
 
 
@@ -239,14 +239,14 @@
       <!--Første opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="efteraar1.html">
-        <img src="img/efteraar/efteraar2billede2.png" alt="">
+        <img src="img/efteraar/efteraar2billede2.png" alt="Lilleskåls efterårsopskrift: Efterårs-gnocchi med tomat, salvie og karamelliseret løg">
         <p>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</p>
       </a>
 
       <!--Anden opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="efteraar2.html">
-        <img src="img/efteraar/efteraar3billede2.png" alt="">
+        <img src="img/efteraar/efteraar3billede2.png" alt="Lilleskåls efterårsopskrift: Efterårspande med karamelliserede porrer og gulerødder">
         <p>Efterårspande med karamelliserede porrer og gulerødder</p>
       </a>
 
