--- a/foraar2.html
+++ b/foraar2.html
@@ -77,7 +77,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/foraar/heroforaar2.png">
-      <img src="img/foraar/heroforaar2mobil.png" alt="">
+      <img src="img/foraar/heroforaar2mobil.png" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron">
     </picture>
 
   </div>
@@ -145,9 +145,9 @@
             </div>
 
             <!--Billeder-->
-            <img src="img/foraar/foraar2tomat.png" class="billede opskrift-billede1" alt="">
-            <img src="img/foraar/foraar2billede4.png" class="billede opskrift-billede2" alt="">
-            <img src="img/foraar/foraar2billede3.png" class="billede opskrift-billede3" alt="">
+            <img src="img/foraar/foraar2tomat.png" class="billede opskrift-billede1" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron">
+            <img src="img/foraar/foraar2billede4.png" class="billede opskrift-billede2" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron">
+            <img src="img/foraar/foraar2billede3.png" class="billede opskrift-billede3" alt="Lilleskåls forårsopskrift: Forårs-orzo med tomater og citron">
           </div>
 
 
@@ -224,14 +224,14 @@
       <!--Første opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="foraar3.html">
-        <img src="img/foraar/foraar3billede1.png" alt="">
+        <img src="img/foraar/foraar3billede1.png" alt="Lilleskåls forårsopskrift: Forårsnudler med radiser, porre og sesam">
         <p>Forårsnudler med radiser, porre og sesam</p>
       </a>
 
       <!--Anden opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="foraar1.html">
-        <img src="img/foraar/foraar1billede2.png" alt="">
+        <img src="img/foraar/foraar1billede2.png" alt="Lilleskåls forårsopskrift: Pasta med tomat, spidskål og ramsløgspesto">
         <p>Pasta med tomat, spidskål og ramsløgspesto</p>
       </a>
     </div>
