--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -77,7 +77,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/forsidebillede.png">
-      <img src="img/forsidemobil.png" alt="">
+      <img src="img/forsidemobil.png" alt="Lilleskåls køkken med de 2 kokke der laver mad og drikker vin">
     </picture>
     <!--Tekst & logo over baggrundsbillede-->
     <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
@@ -85,11 +85,11 @@
     <!--d-flex ....: centrerer tekst midt i billedet-->
     <div
       class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
-      <img class="logo-forside" src="img/logovandmaling.png" alt="">
+      <img class="logo-forside" src="img/logovandmaling.png" alt="Lilleskål logo">
       <h4 class="call-to-action"><a href="alleopskrifter.html">
           <picture>
             <source media="(min-width: 768px)" srcset="img/opskriftknapstor.png">
-            <img src="img/opskriftknapmobil.png" alt="">
+            <img src="img/opskriftknapmobil.png" alt=" Se opskrifter mobil knap">
           </picture>
         </a></h4>
     </div>
@@ -117,7 +117,7 @@ From line 88, column 7; to line 88, column 33
       <!--Illustration vises ikke på mobil-->
       <!-- Kolonne: 2 på små skærme (≥576px) og op; forskydning til venstre: 2 kolonner -->
       <div class="d-none d-sm-block col-sm-2 offset-sm-2">
-        <img src="img/illustrationer/basilikum.png" alt="illustration">
+        <img src="img/illustrationer/basilikum.png" alt="Basilikum illustration">
       </div>
     </div>
   </div>
@@ -241,13 +241,13 @@ From line 88, column 7; to line 88, column 33
 
   <!--Collage m. billeder-->
   <section class="collage-container custom-container">
-    <img src="img/kurv.png" class="billede kurv" alt="">
-    <img src="img/foraarsbord.png" class="billede foraarsbord" alt="">
-    <img src="img/illustrationer/porre.png" class="billede asparges" alt="">
-    <img src="img/illustrationer/tomat.png" class="billede tomat" alt="">
-    <img src="img/foraarsmad.png" class="billede foraarsmad" alt="">
-    <img src="img/driver.png" class="billede driver" alt="">
-    <img src="img/vin.png" class="billede vin" alt="">
+    <img src="img/kurv.png" class="billede kurv" alt="Indkøbskurv med årstidens grøntsager">
+    <img src="img/foraarsbord.png" class="billede foraarsbord" alt="Forårsbord">
+    <img src="img/illustrationer/porre.png" class="billede asparges" alt="Porre illustration">
+    <img src="img/illustrationer/tomat.png" class="billede tomat" alt="Tomat illustration">
+    <img src="img/foraarsmad.png" class="billede foraarsmad" alt="Lilleskål forårsret">
+    <img src="img/driver.png" class="billede driver" alt="Kvinder i drivhus spiser lilleskål mad">
+    <img src="img/vin.png" class="billede vin" alt="Vin på bord">
 
     <div class="container d-flex justify-content-center align-items-center">
 
@@ -280,7 +280,7 @@ From line 88, column 7; to line 88, column 33
     <a class="falles-link" href="faellesskaal.html">
       <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
-        <img src="img/mobilfaellesskaal.png" alt="">
+        <img src="img/mobilfaellesskaal.png" alt="Vinglas skåler illustration">
       </picture>
     </a>
   </div>
