--- a/skabelon.html
+++ b/skabelon.html
@@ -19,7 +19,7 @@
     <!--NAVIGATIONSBAR-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
   <div class="container-fluid">
-    <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
+    <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="Lilleskål logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
