--- a/sommer.html
+++ b/sommer.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -87,7 +87,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol efter medium skærm (768px)-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/jordbaer.png" alt="illustration">
+        <img src="img/illustrationer/jordbaer.png" alt="Jordbær illustration">
       </div>
     </div>
   </div>
@@ -114,7 +114,7 @@
         <!--Opskrift 1-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3">
-          <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
+          <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt="Lilleskål sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
           <a href="sommer1.html">
             <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
           </a>
@@ -122,7 +122,7 @@
         <!--Opskrift 2-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3">
-          <a href="sommer2.html"><img src="img/sommer1.png" alt=""></a>
+          <a href="sommer2.html"><img src="img/sommer1.png" alt="Lilleskål sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
           <a href="sommer2.html">
             <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
           </a>
@@ -130,7 +130,7 @@
         <!--Opskrift 3-->
         <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3">
-          <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt=""></a>
+          <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt="Sommerpizza med sæsonens grønt og sprød bund"></a>
           <a href="sommer3.html">
             <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
           </a>
