--- a/vinter.html
+++ b/vinter.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -84,7 +84,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol efter medium skærm (768px)-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/porre.png" alt="illustration">
+        <img src="img/illustrationer/porre.png" alt="Porre illustration">
       </div>
     </div>
   </div>
@@ -110,7 +110,7 @@
       <!--Opskrift 1-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3">
-          <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt=""></a>
+          <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt="Lilleskål vinteropskrift: Vinter-nudler med porre, kål og cremet sesamsauce"></a>
           <a href="vinter1.html">
             <h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3>
           </a>
@@ -118,7 +118,7 @@
       <!--Opskrift 2-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3">
-          <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt=""></a>
+          <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt="Lilleskål vinteropskrift: Vinterpasta med grønkålssauce og citron"></a>
           <a href="vinter2.html">
             <h3>Vinterpasta med grønkålssauce og citron</h3>
           </a>
@@ -126,7 +126,7 @@
       <!--Opskrift 3-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3">
-          <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt=""></a>
+          <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt="Lilleskål vinteropskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg"></a>
           <a href="vinter3.html">
             <h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3>
           </a>
