--- a/vinter2.html
+++ b/vinter2.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -77,7 +77,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/vinter/herovinterstor2.png">
-      <img src="img/vinter/herolillevinter2.png" alt="">
+      <img src="img/vinter/herolillevinter2.png" alt="Lilleskål vinteropskrift">
     </picture>
 
   </div>
@@ -98,7 +98,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol ved medium skærm (768px) og op-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/kaal.png" alt="illustration">
+        <img src="img/illustrationer/kaal.png" alt="Kål illustration">
       </div>
     </div>
   </div>
@@ -146,9 +146,9 @@
             </div>
 
             <!--Billeder-->
-            <img src="img/vinter/vinterlys.png" class="billede opskrift-billede1" alt="">
-            <img src="img/vinter/vinter2billede1.png" class="billede opskrift-billede2" alt="">
-            <img src="img/vinter/vinter2billede3ny.png" class="billede opskrift-billede3" alt="">
+            <img src="img/vinter/vinterlys.png" class="billede opskrift-billede1" alt="Lilleskål vinteropskrift: Vinter-pasta med grønkålssauce og citron">
+            <img src="img/vinter/vinter2billede1.png" class="billede opskrift-billede2" alt="Lilleskål vinteropskrift: Vinter-pasta med grønkålssauce og citron">
+            <img src="img/vinter/vinter2billede3ny.png" class="billede opskrift-billede3" alt="Lilleskål vinteropskrift: Vinter-pasta med grønkålssauce og citron">
           </div>
 
 
@@ -230,14 +230,14 @@
       <!--Første opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="vinter3.html">
-        <img src="img/vinter/vinter3billede3.png" alt="">
+        <img src="img/vinter/vinter3billede3.png" alt="Lilleskål vinteropskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg">
         <p>Vinterpande med grønkål, svampe og flødestuvet perlebyg</p>
       </a>
 
       <!--Anden opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="vinter1.html">
-        <img src="img/vinter/vinter1billede1.png" alt="">
+        <img src="img/vinter/vinter1billede1.png" alt="Lilleskål vinteropskrift: Vinter-nudler med porre, kål og cremet sesamsauce">
         <p>Vinter-nudler med porre, kål og cremet sesamsauce</p>
       </a>
     </div>
