--- a/vinter3.html
+++ b/vinter3.html
@@ -29,7 +29,7 @@
   <!--Fixed navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="logo skål"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo-vand-2.png" alt="Lilleskål logo"></a>
 
       <!--Burger-menu til mobil-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -77,7 +77,7 @@
   <div class="hero-sektion position-relative">
     <picture>
       <source media="(min-width: 768px)" srcset="img/vinter/herovinter3.png">
-      <img src="img/vinter/herovinter3mobil.png" alt="">
+      <img src="img/vinter/herovinter3mobil.png" alt="Lilleskål vinteropskrift">
     </picture>
 
   </div>
@@ -99,7 +99,7 @@
       <!--Illustration vises ikke på mobil-->
       <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol ved medium skærm (768px) og op-->
       <div class="d-none d-sm-block col-sm-3 offset-md-1">
-        <img src="img/illustrationer/porre.png" alt="illustration">
+        <img src="img/illustrationer/porre.png" alt="Porre illustration">
       </div>
     </div>
   </div>
@@ -146,9 +146,9 @@
             </div>
 
             <!--Billeder-->
-            <img src="img/vinter/vinterloog.png" class="billede opskrift-billede1" alt="">
-            <img src="img/vinter/vinter3billede3.png" class="billede opskrift-billede2" alt="">
-            <img src="img/efteraar/efteraar3billede3.png" class="billede opskrift-billede3" alt="">
+            <img src="img/vinter/vinterloog.png" class="billede opskrift-billede1" alt="Lilleskål vinteropskrift: Vinterpande med grønkål, svampe og flødestuvet perlebyg">
+            <img src="img/vinter/vinter3billede3.png" class="billede opskrift-billede2" alt="Vinglas på bord">
+            <img src="img/efteraar/efteraar3billede3.png" class="billede opskrift-billede3" alt="Porre på pande">
           </div>
 
 
@@ -232,14 +232,14 @@
       <!--Første opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="vinter1.html">
-        <img src="img/vinter/vinter1billede1.png" alt="">
+        <img src="img/vinter/vinter1billede1.png" alt="Lilleskål vinteropskrift: Vinter-nudler med porre, kål og cremet sesamsauce">
         <p>Vinter-nudler med porre, kål og cremet sesamsauce</p>
       </a>
 
       <!--Anden opskrift: hele boksen er et link-->
       <!-- Kolonne: 12 på mobil, 5 på små skærme (576px) og op -->
       <a class="col-12 col-sm-5" href="vinter2.html">
-        <img src="img/vinter/vinter2billede1.png" alt="">
+        <img src="img/vinter/vinter2billede1.png" alt="Lilleskål vinteropskrift: Vinterpasta med grønkålssauce og citron">
         <p> Vinterpasta med grønkålssauce og citron</p>
       </a>
     </div>
